--- a/Presentations/Flyer.graffle/data.plist
+++ b/Presentations/Flyer.graffle/data.plist
@@ -18,7 +18,7 @@
 	<key>GuidesVisible</key>
 	<string>YES</string>
 	<key>ImageCounter</key>
-	<integer>154</integer>
+	<integer>155</integer>
 	<key>ImageLinkBack</key>
 	<array>
 		<dict/>
@@ -54,6 +54,7 @@
 	</array>
 	<key>ImageList</key>
 	<array>
+		<string>image154.tiff</string>
 		<string>image153.png</string>
 		<string>image152.pdf</string>
 		<string>image151.png</string>
@@ -71,7 +72,6 @@
 		<string>image122.png</string>
 		<string>image121.png</string>
 		<string>image120.png</string>
-		<string>image119.JPG</string>
 		<string>image116.png</string>
 		<string>image115.png</string>
 		<string>image114.png</string>
@@ -162,7 +162,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2008-11-01 17:14:07 +0100</string>
+	<string>2008-11-24 08:42:52 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -6577,6 +6577,15 @@ Contributors
 					<string>ShapedGraphic</string>
 					<key>FontInfo</key>
 					<dict>
+						<key>Color</key>
+						<dict>
+							<key>b</key>
+							<string>0</string>
+							<key>g</key>
+							<string>0</string>
+							<key>r</key>
+							<string>0</string>
+						</dict>
 						<key>Font</key>
 						<string>Helvetica</string>
 						<key>Size</key>
@@ -6615,15 +6624,15 @@ Contributors
 						<key>Text</key>
 						<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf420
 {\fonttbl\f0\fnil\fcharset0 Georgia;\f1\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
+{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa320\qc\pardirnatural
 
-\f0\b\fs24 \cf1 \expnd0\expndtw0\kerning0
+\f0\b\fs24 \cf2 \expnd0\expndtw0\kerning0
 Scalability
 \f1\b0\fs20 \expnd0\expndtw0\kerning0
 \
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qj\pardirnatural
-\cf1 \expnd0\expndtw0\kerning0
+\cf2 \expnd0\expndtw0\kerning0
 Applications build with Equalizer are scalable, using multiple graphics cards, processors and computers to render a single or multiple views. The application's rendering code is parallelized, in contrast to other solutions which operate on the OpenGL command stream produced by a single application thread.\
 Equalizer provides a comprehensive set of algorithms to parallelize and load-balance the rendering of demanding data sets. The rendering is distributed across all available resources (decomposition) and the results are assembled on the final view (recomposition).\
 Equalizer supports screen-space, database, time-multiplex, pixel and stereo task distribution.}</string>
@@ -7444,7 +7453,7 @@ Equalizer is a product of Eyescale Software GmbH.\
 \deftab720
 \pard\pardeftab720\qc
 
-\f0\fs12 \cf0 A display wall running an Equalizer-based terrain rendering application}</string>
+\f0\fs12 \cf0 RTT Scale module for RTT Deltagen (Copyright Realtime Technologies AG, 2008)}</string>
 					</dict>
 				</dict>
 				<dict>
@@ -7784,11 +7793,11 @@ Support for Immersive Environments:
 					<key>ID</key>
 					<integer>1187</integer>
 					<key>ImageID</key>
-					<integer>119</integer>
+					<integer>154</integer>
 					<key>ManualSizeImage</key>
 					<string>YES</string>
 					<key>Scale</key>
-					<real>0.12999999523162842</real>
+					<real>0.52999997138977051</real>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -8640,14 +8649,12 @@ Feature-Rich Framework:
 		<string>Canvases</string>
 		<key>DrawerWidth</key>
 		<real>209</real>
-		<key>FitInWindow</key>
-		<true/>
 		<key>Frame</key>
-		<string>{{345, 281}, {555, 477}}</string>
+		<string>{{333, 47}, {870, 731}}</string>
 		<key>VisibleRegion</key>
-		<string>{{0, -1}, {838, 588.152}}</string>
+		<string>{{0, 0}, {438.188, 324.413}}</string>
 		<key>Zoom</key>
-		<real>0.66050195693969727</real>
+		<real>2</real>
 	</dict>
 </dict>
 </plist>
